# hft-backtest-engine

./: .gitignore  BIG_DATA_OVERVIEW.md  Cargo.toml  TODO.md  analyze_results.py  run_analysis.sh
configs/: jan25_advanced_meanrev.yaml  jan25_advanced_scalp.yaml  jan25_arbitrage.yaml  jan25_market_making.yaml  jan25_meanrev.yaml  jan25_momentum.yaml  jan25_order_flow.yaml  jan25_pairs_trading.yaml  jan25_profitable_momentum.yaml  jan25_range_trading.yaml  jan25_scalp.yaml  jan25_simple.yaml  xauusd_meanrev.yaml  xauusd_scalp.yaml
scripts/: download_dukascopy_xauusd_ticks.py  download_xauusd_ticks.py
