[package]
name = "hft-backtest-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data processing and analysis
polars = { version = "0.40", features = ["lazy", "temporal", "strings", "csv", "parquet"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Plotting and visualization
plotters = "0.3"

# CLI and error handling
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Performance monitoring and logging
tracing = "0.1"
tracing-subscriber = "0.3"
hdrhistogram = "7.0"

# System information
sysinfo = "0.30"

# Concurrency and performance
crossbeam = "0.8"
rayon = "1.8"

# Mathematical operations
statrs = "0.16"

# File I/O
walkdir = "2.4"

# Memory optimization
bytes = "1.5"

[dev-dependencies]
criterion = "0.5"
